Make start window and initialized

--- a/MiniProjekat/HCIMiniProjekat/HCIMiniProjekat.csproj
+++ b/MiniProjekat/HCIMiniProjekat/HCIMiniProjekat.csproj
@@ -5,6 +5,16 @@
     <TargetFramework>net6.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
+    <ApplicationIcon>dollar-1-logo-icon-png-svg.ico</ApplicationIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="dollar-1-logo-icon-png-svg.ico" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="LiveCharts" Version="0.9.7" />
+    <PackageReference Include="LiveCharts.Wpf" Version="0.9.7" />
+  </ItemGroup>
 
 </Project>
